--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <nav>
       <div class="logo">
-        <a href="Home.html" class="spaLOgo">Dagopia</a>
+        <a href="index.html" class="spaLOgo" title="This is Dagopia Website,Wellcome">Dagopia</a>
       </div>
       <div class="nav-toggle" onclick="toggleNav()">&#9776; Menu</div>
       <ul class="nav">
@@ -26,7 +26,7 @@
       <div class="grid-container">
         <div class="grid-item" id="itemOne">
          <div class="textHome">
-          <h2>We Explore Your Inner Shining Beauty Wellcome  to <span style="color: #fff;">  Dagopia SPA</span></h2>
+          <h2>We Explore Your Inner Shining Beauty Wellcome  to <span style="color: #fff;">Dagopia SPA</span></h2>
          <div class="textP">
           <p>Dagopia Spa and Beauty Salon, built on the Weblium platform, is designed to showcase our services,
             pricing, about us, team, portfolio, testimonials, products, and contacts. We invite you to explore the
